add/fix: added middleware folder for auth, fixed bugs with update route
