# account-service/routers/account-router.go
@@ -11,5 +11,5 @@ func AccountRouter(r *gin.RouterGroup, accountService *service.AccountService) {
 	r.GET("/fetch-acc/:acc_num", accountService.GetAccoutById)
 	r.POST("/register", accountService.AddAccount)
 	r.PATCH("/update_acc/:acc_num", accountService.UpdateHasCard)
-
+	r.DELETE("/delete-user/:email", accountService.DeleteUser)
 }
